// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`member-group-tool-index should have CRUD tools when user has members section access 1`] = `
[
  "get-member-group",
  "get-member-group-by-id-array",
  "create-member-group",
  "update-member-group",
  "delete-member-group",
  "get-member-group-root",
]
`;

exports[`member-group-tool-index should have all tools when user has both accesses 1`] = `
[
  "get-member-group",
  "get-member-group-by-id-array",
  "create-member-group",
  "update-member-group",
  "delete-member-group",
  "get-member-group-root",
]
`;

exports[`member-group-tool-index should have basic tools by default 1`] = `
[
  "get-member-group",
  "get-member-group-by-id-array",
]
`;

exports[`member-group-tool-index should have tree tools when user has member groups access 1`] = `
[
  "get-member-group",
  "get-member-group-by-id-array",
]
`;
